--- a/ui/index.html
+++ b/ui/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Glance</title>
-    <link rel="icon" href="data:," />
+    <link rel="icon" type="image/x-icon" href="/icon.ico" />
+    <link rel="icon" type="image/png" href="/icon.png" />
+    <link rel="apple-touch-icon" href="/icon.png" />
   </head>
   <body>
     <div id="app"></div>
